--- a/templates/scripts.html
+++ b/templates/scripts.html
@@ -1,7 +1,17 @@
 <script src="{{ url_for('static', filename='js/lib/jquery-1.11.3.min.js' ) }}"></script>
 <script src="{{ url_for('static', filename='js/lib/underscore.js' ) }}"></script>
 <script src="{{ url_for('static', filename='js/lib/backbone-min.js' ) }}"></script>
+
 <script src="{{ url_for('static', filename='js/App.js' ) }}"></script>
+
 <script src="{{ url_for('static', filename='js/models/user.js' ) }}"></script>
 <script src="{{ url_for('static', filename='js/models/picture.js' ) }}"></script>
 <script src="{{ url_for('static', filename='js/models/post.js' ) }}"></script>
+
+
+<script src="{{ url_for('static', filename='js/collections/posts.js' ) }}"></script>
+
+<script src="{{ url_for('static', filename='js/views/postListView.js' ) }}"></script>
+<script src="{{ url_for('static', filename='js/views/postView.js' ) }}"></script>
+
+<script src="{{ url_for('static', filename='js/routers/appRouter.js' ) }}"></script>
