aaaaand I have some objects

--- a/templates/index.html
+++ b/templates/index.html
@@ -31,9 +31,9 @@ Even Santa is a member!
         <input type="text" id="user" name="user" value="<%= User %>" required/>
         <label>Title:</label>
         <input type="text" id="title" name="title" value="<%= Title %>"/>
-        <label>Country:</label>
-        <input type="text" id="Content" name="Content" value="<%= Content %>"/>
-        <label>Region:</label>
+        <label>content:</label>
+        <input type="text" id="content" name="content" value="<%= Content %>"/>
+        <label>Date:</label>
         <input type="text" id="Date" name="Date"  value="<%= Date %>"/>
     </div>
 </script>
