--- a/static/css/site.css
+++ b/static/css/site.css
@@ -191,3 +191,36 @@ line-height: 1.4;
   overflow: auto;
   font-family: Menlo,Monaco,"Liberation Mono",Consolas,monospace !important;
 }
+
+#allPosts ul {
+	list-style-type: none;
+	padding-left:0;
+}
+
+#allPosts ul li {
+	padding: 15px 0px 15px 0px;
+}
+
+#allPosts ul li .postDetails li {
+	padding: 0px 0px 0px 0px;
+}
+
+#allPosts ul li table{
+	background-color: #fafafa;
+	width: 100%;
+	height: 100px;
+	border-style: solid;
+    border-color: #DCDCDC;
+    border-radius: 10px;
+}
+
+#allPosts ul li table{
+	background-color: #fafafa;
+	width: 100%;
+	border-style: solid;
+    border-color: #DCDCDC;
+    border-radius: 10px;
+}
+#allPosts ul li table .postUserPhoto{
+	width: 15%;
+}
