--- a/templates/scripts.html
+++ b/templates/scripts.html
@@ -7,11 +7,15 @@
 <script src="{{ url_for('static', filename='js/models/user.js' ) }}"></script>
 <script src="{{ url_for('static', filename='js/models/picture.js' ) }}"></script>
 <script src="{{ url_for('static', filename='js/models/post.js' ) }}"></script>
+<script src="{{ url_for('static', filename='js/models/image.js' ) }}"></script>
 
 
 <script src="{{ url_for('static', filename='js/collections/posts.js' ) }}"></script>
+<script src="{{ url_for('static', filename='js/collections/pictures.js' ) }}"></script>
+<script src="{{ url_for('static', filename='js/collections/users.js' ) }}"></script>
 
 <script src="{{ url_for('static', filename='js/views/postListView.js' ) }}"></script>
 <script src="{{ url_for('static', filename='js/views/postView.js' ) }}"></script>
+<script src="{{ url_for('static', filename='js/views/userView.js' ) }}"></script>
 
 <script src="{{ url_for('static', filename='js/routers/appRouter.js' ) }}"></script>
