css header, users, user photo

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,12 +5,10 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/site.css') }}"/>
 </head>
 <body>
-<div class="container">
-    <div id="menu" class="menu cf"></div>
-    <h1>Christmas</h1>
-
-<div id="allPosts"></div>
-
+<img src="static/appPhotos/1.jpg" id="header" alt=""/>
+<div id="container">
+<div id="allPosts" style=></div>
+</div>
 <!-- Templates -->
 <script type="text/template" id="tpl-post-details">
     <table>
