--- a/static/css/site.css
+++ b/static/css/site.css
@@ -230,3 +230,17 @@ line-height: 1.4;
     overflow: auto;
     border-style: hidden;	
 }
+#header {
+	position: fixed; 
+  	top: 0; 
+  	left: 0; 
+	
+  	/* Preserve aspet ratio */
+  	width: 100%;
+  	height: 200px;
+}
+#container {
+	margin-top: 200px;
+	margin-left: 70px;
+	margin-right: 70px;
+}
