add css, add user details

--- a/static/css/site.css
+++ b/static/css/site.css
@@ -244,3 +244,16 @@ line-height: 1.4;
 	margin-left: 70px;
 	margin-right: 70px;
 }
+
+td.postsInTable {
+	width: 70%;
+}
+
+td.userInTable {
+	width: 30%;
+}
+
+td.userInTable ul {
+	list-style-type: none;
+	padding-left:0;
+}
