--- a/static/css/site.css
+++ b/static/css/site.css
@@ -240,6 +240,7 @@ line-height: 1.4;
     height: 50px;
     overflow: auto;
     border-style: hidden;	
+    font-family: inherit;
 }
 #header {
 	position: fixed; 
