post works yayaayyy add some css and bug fix

--- a/templates/index.html
+++ b/templates/index.html
@@ -48,8 +48,8 @@
         </td>
         <td>
             <ul class = "postDetails">
-                <li><input type="text" id="title" name="title" value="<%= title %>" /></li>
-                <li><textarea value="What do you want for Christmas? ..." id = "content" style= "width: 100%;  height: 50px; overflow: auto; font-family: inherit;"  > <%= content %></textarea></li>
+                <li><input type="text" id="title" name="title" placeholder="Title" /></li>
+                <li><textarea placeholder="What do you want for Christmas? ..." id = "content" style= "width: 100%;  height: 50px; overflow: auto; font-family: inherit;"  ></textarea></li>
             </ul>
         </td>
         </tr>
