--- a/templates/index.html
+++ b/templates/index.html
@@ -9,11 +9,14 @@
 <div id="container">
 <table style="width:100%">
     <tr>
-        <td class = "userInTable" style = "
-    text-align: center;"><div id="userDetails" style="position: fixed;
+        <td class = "userInTable" style = "text-align: center;"><div id="userDetails" style="position: fixed;
     top: 250px; width: 150px;" ></div></td>
         <td class = "postsInTable"><div id="allPosts" ></div></td>
     </tr>
+    <tr id="loginData"><td><img src= "/static/appPhotos/santa-claus.jpg" alt="" style = "width:200px; height:150px"/></td><td><div id = "loginForm"> 
+        
+        <div> Hi! You are <input type="text" class="form-control" id="username"> and you password is: <input type="password" class="form-control" id="pwd">
+        </div><button class="loginButton">Sign in</button><button class="signUpButton">Sign up</button></td></tr>
 </table>
 
 
