--- a/templates/index.html
+++ b/templates/index.html
@@ -13,10 +13,22 @@
     top: 250px; width: 150px;" ></div></td>
         <td class = "postsInTable"><div id="allPosts" ></div></td>
     </tr>
-    <tr id="loginData"><td><img src= "/static/appPhotos/santa-claus.jpg" alt="" style = "width:200px; height:150px"/></td><td><div id = "loginForm"> 
-        
-        <div> Hi! You are <input type="text" class="form-control" id="username"> and you password is: <input type="password" class="form-control" id="pwd">
-        </div><button class="loginButton">Sign in</button><button class="signUpButton">Sign up</button></td></tr>
+    <tr id="loginData">
+        <td><img src= "/static/appPhotos/santa-claus.jpg" alt="" style = "width:200px; height:150px"/>
+        </td>
+        <td>        
+            <div id = "loginForm"> Hi! You are 
+                <input type="text" class="form-control" id="username"> and you password is: 
+                <input type="password" class="form-control" id="pwd">        
+            </div>
+            <div id = "signUpForm" style="display:none;"> Your first name is :  
+                <input type="text" id="firstname"> and you last name is: 
+                <input type="text" id="lastname">    
+            </div>
+            <button class="loginButton">Sign in</button>
+            <button class="signUpButton">Sign up</button>
+        </td>
+    </tr>
 </table>
 
 
@@ -30,7 +42,7 @@
         </td>
         <td>
             <ul class = "postDetails">
-                <li><a href='#user/<%= user.id %>'><%= user.firstname %></a> <small> at <%= date %></small></li>
+                <li><a href='#user/<%= user.id %>'><%= user.username %></a> <small> at <%= date %></small></li>
                 <li class="postTitle"><%= title %></li>
                 <li class="postContent"><textarea readonly><%= content %></textarea></li>
             </ul>
